# Canvas-tui

./: Cargo.toml  README.md
src/: cache.rs  config.rs  main.rs
src/api/: mod.rs  pagination.rs
src/models/: mod.rs
src/tui/: event.rs  mod.rs  ui.rs
